--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -157,6 +157,12 @@
                                             <input type="text" class="form-control input-sm" id="uu_022" autocomplete="off" />
                                         </div>
                                     </div>
+                                    <div class="col-md-3" id="uu_38_a" style="display:none;">
+                                        <div class="form-group" id="uu_38_c">
+                                            <label>Autor</label>
+                                            <input type="text" class="form-control input-sm" id="uu_38" autocomplete="off" />
+                                        </div>
+                                    </div>
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_00_c">
                                             <label for="uu_00">Empresa propietaria *</label>
@@ -311,7 +317,7 @@
                                         </div>
                                     </div>
                                 </div>*@
-                                @*<div class="row">
+                                                        @*<div class="row">
                                     <div class="col-md-3">
                                         <div class="form-group" id="notificacion_tituloc">
                                             <label>Correo de notificación de título</label>
@@ -334,6 +340,30 @@
                                             <a href="" id="titulol" class="btn btn-sm btn-success"><i class="fa fa-download"></i> Descargar documento</a>
                                             <label for="titulo" class="btn btn-sm btn-info btn-lbl"><i class="fa fa-upload"></i> Seleccionar archivo</label>
                                             <input type="file" id="titulo" style="display:none;" />
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row" id="contrato_a" style="display:none;">
+                                    <div class="col-md-12">
+                                        <div class="form-group" id="contratot" style="margin:0 !important;">
+                                            <label>Contrato de cesión de derechos del inventor</label>
+                                        </div>
+                                        <div class="form-group" id="contratoc">
+                                            <a href="" id="contratol" class="btn btn-sm btn-success"><i class="fa fa-download"></i> Descargar documento</a>
+                                            <label for="contrato" class="btn btn-sm btn-info btn-lbl"><i class="fa fa-upload"></i> Seleccionar archivo</label>
+                                            <input type="file" id="contrato" style="display:none;" />
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row" id="reivindicacion_a" style="display:none;">
+                                    <div class="col-md-12">
+                                        <div class="form-group" id="reivindicaciont" style="margin:0 !important;">
+                                            <label>Reivindicaciones</label>
+                                        </div>
+                                        <div class="form-group" id="reivindicacionc">
+                                            <a href="" id="reivindicacionl" class="btn btn-sm btn-success"><i class="fa fa-download"></i> Descargar documento</a>
+                                            <label for="reivindicacion" class="btn btn-sm btn-info btn-lbl"><i class="fa fa-upload"></i> Seleccionar archivo</label>
+                                            <input type="file" id="reivindicacion" style="display:none;" />
                                         </div>
                                     </div>
                                 </div>
@@ -362,78 +392,90 @@
                                 </div>
                             </div>@*tab01*@
 
-                            <div class="tab-pane fade" id="tab02" role="tabpanel">
-                                <div class="row">
-                                    <div class="col-md-3">
-                                        <div class="form-group" id="uu_11_c">
-                                            <label>Número de solicitud *</label>
-                                            <input type="text" class="form-control input-sm" id="uu_11" autocomplete="off" />
-                                        </div>
+                        <div class="tab-pane fade" id="tab02" role="tabpanel">
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <div class="form-group" id="uu_11_c">
+                                        <label>Número de solicitud *</label>
+                                        <input type="text" class="form-control input-sm" id="uu_11" autocomplete="off" />
                                     </div>
-                                    <div class="col-md-3" id="uu_12_a">
-                                        <div class="form-group" id="uu_12_c">
-                                            <label for="uu_12">Tipo de registro *</label>
-                                            <select class="select2 form-control input-sm custom-select" id="uu_12" autocomplete="off" style="width: 100%;">
-                                                <option value="0" disabled selected>Seleccione una opción</option>
-                                                @foreach (TipoRegistro item in ViewBag.tipo_registro_solicitud)
-                                                {
-                                                    <option value="@item.id">@item.nombre</option>
-                                                }
-                                            </select>
-                                        </div>
+                                </div>
+                                <div class="col-md-3" id="uu_12_a">
+                                    <div class="form-group" id="uu_12_c">
+                                        <label for="uu_12">Tipo de registro *</label>
+                                        <select class="select2 form-control input-sm custom-select" id="uu_12" autocomplete="off" style="width: 100%;">
+                                            <option value="0" disabled selected>Seleccione una opción</option>
+                                            @foreach (TipoRegistro item in ViewBag.tipo_registro_solicitud)
+                                            {
+                                                <option value="@item.id">@item.nombre</option>
+                                            }
+                                        </select>
                                     </div>
-                                    <div class="col-md-3">
-                                        <div class="form-group" id="uu_13_c">
-                                            <label for="uu_13">Persona que pidió el registro *</label>
-                                            <select class="select2 form-control input-sm custom-select" id="uu_13" autocomplete="off" style="width: 100%;">
-                                                <option value="0" disabled selected>Seleccione una opción</option>
-                                                @foreach (AspNetUsers item in ViewBag.usuarios)
-                                                {
-                                                    <option value="@item.id">@item.nombre</option>
-                                                }
-                                            </select>
-                                        </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group" id="uu_13_c">
+                                        <label for="uu_13">Persona que pidió el registro *</label>
+                                        <select class="select2 form-control input-sm custom-select" id="uu_13" autocomplete="off" style="width: 100%;">
+                                            <option value="0" disabled selected>Seleccione una opción</option>
+                                            @foreach (AspNetUsers item in ViewBag.usuarios)
+                                            {
+                                                <option value="@item.id">@item.nombre</option>
+                                            }
+                                        </select>
                                     </div>
-                                    <div class="col-md-3">
-                                        <div class="form-group" id="uu_14_c">
-                                            <label for="uu_14">Despacho *</label>
-                                            <select class="select2 form-control input-sm custom-select" id="uu_14" autocomplete="off" style="width: 100%;">
-                                                <option value="0" disabled selected>Seleccione una opción</option>
-                                                @foreach (Despacho item in ViewBag.despacho)
-                                                {
-                                                    <option value="@item.id">@item.nombre</option>
-                                                }
-                                            </select>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-md-3">
-                                        <div class="form-group" id="uu_15_c">
-                                            <label for="uu_15">Corresponsal *</label>
-                                            <select class="select2 form-control input-sm custom-select" id="uu_15" autocomplete="off" style="width: 100%;">
-                                                <option value="0" disabled selected>Seleccione una opción</option>
-                                                @foreach (Corresponsal item in ViewBag.corresponsal)
-                                                {
-                                                    <option value="@item.id">@item.nombre</option>
-                                                }
-                                            </select>
-                                        </div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="form-group" id="uu_14_c">
+                                        <label for="uu_14">Despacho *</label>
+                                        <select class="select2 form-control input-sm custom-select" id="uu_14" autocomplete="off" style="width: 100%;">
+                                            <option value="0" disabled selected>Seleccione una opción</option>
+                                            @foreach (Despacho item in ViewBag.despacho)
+                                            {
+                                                <option value="@item.id">@item.nombre</option>
+                                            }
+                                        </select>
                                     </div>
                                 </div>
 
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <div class="form-group" id="solicitudt" style="margin:0 !important;">
-                                            <label>Solicitud</label>
-                                        </div>
-                                        <div class="form-group" id="solicitudc">
-                                            <a href="" id="solicitudl" class="btn btn-sm btn-success"><i class="fa fa-download"></i></a>
-                                            <label for="solicitud" class="btn btn-sm btn-info btn-lbl"><i class="fa fa-upload"></i> Seleccionar archivo</label>
-                                            <input type="file" id="solicitud" style="display:none;" />
-                                        </div>
+                                <div class="col-md-3">
+                                    <div class="form-group" id="uu_15_c">
+                                        <label for="uu_15">Corresponsal *</label>
+                                        <select class="select2 form-control input-sm custom-select" id="uu_15" autocomplete="off" style="width: 100%;">
+                                            <option value="0" disabled selected>Seleccione una opción</option>
+                                            @foreach (Corresponsal item in ViewBag.corresponsal)
+                                            {
+                                                <option value="@item.id">@item.nombre</option>
+                                            }
+                                        </select>
                                     </div>
                                 </div>
-                                <hr />
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group" id="solicitudt" style="margin:0 !important;">
+                                        <label>Solicitud</label>
+                                    </div>
+                                    <div class="form-group" id="solicitudc">
+                                        <a href="" id="solicitudl" class="btn btn-sm btn-success"><i class="fa fa-download"></i></a>
+                                        <label for="solicitud" class="btn btn-sm btn-info btn-lbl"><i class="fa fa-upload"></i> Seleccionar archivo</label>
+                                        <input type="file" id="solicitud" style="display:none;" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row" id="carta_a" style="display:none;">
+                                <div class="col-md-12">
+                                    <div class="form-group" id="cartat" style="margin:0 !important;">
+                                        <label>Carta colaboración renumerada</label>
+                                    </div>
+                                    <div class="form-group" id="cartac">
+                                        <a href="" id="cartal" class="btn btn-sm btn-success"><i class="fa fa-download"></i></a>
+                                        <label for="carta" class="btn btn-sm btn-info btn-lbl"><i class="fa fa-upload"></i> Seleccionar archivo</label>
+                                        <input type="file" id="carta" style="display:none;" />
+                                    </div>
+                                </div>
+                            </div>
+                            <hr />
                             <div class="row">
                                 <div class="col-md-8">
                                     <div class="form-group" style="margin:0 !important;">
@@ -456,7 +498,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            </div>@*tab02*@
+                        </div>@*tab02*@
 
                             <div class="tab-pane fade" id="tab03" role="tabpanel">
                                 <div class="row">
